Add social buttons

--- a/index.html
+++ b/index.html
@@ -1,22 +1,101 @@
 <html>
 
 <head>
+    <title>Ilya Belsky</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Belsky.IN</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        @font-face {
+            font-family: 'Fira Mono';
+            font-style: normal;
+            font-weight: 400;
+            font-display: swap;
+            src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v8/N0bX2SlFPv1weGeLZDtgJv7Ss9XZYQ.woff2) format('woff2');
+            unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        }
+    </style>
+    <style>
+        html {
+            /* background-image: linear-gradient(to top, #e4f7fc, #e8f8fc, #ebf8fc, #eff9fb, #f2f9fb); */
+            background-image: linear-gradient(to top, #e4fcf7, #e8fdf9, #ecfefa, #f0fefc, #f4fffd);
+        }
+        .content {
+            padding-top: 5em;
+            padding-left: 10%;
+        }
+        .social-list li {
+            list-style-type: none;
+            font-family: 'Fira Mono', monospace;
+            line-height: 2em;
+        }
+        .social-list li a {
+            text-decoration: none;
+            color: #0d4e60;
+        }
+        .social-list li a:hover {
+            color: #0f2227;
+        }
+        .social-list li a:hover span {
+            text-decoration: underline;
+        }
+        /* .social-list li a:visited {
+            color: #456b75;
+        } */
+        .icon {
+            height: 17px;
+            width: 17px;
+            position: relative;
+            top: 1.5px;
+        }
+    </style>
 </head>
 
 <body>
-
 <div class="content">
-    <pre id="hello-keshee">
-    _    _      _ _          _  __         _               _ 
-    | |  | |    | | |        | |/ /        | |             | |
-    | |__| | ___| | | ___    | ' / ___  ___| |__   ___  ___| |
-    |  __  |/ _ \ | |/ _ \   |  < / _ \/ __|  _ \ / _ \/ _ \ |
-    | |  | |  __/ | | (_) |  | . \  __/\__ \ | | |  __/  __/_|
-    |_|  |_|\___|_|_|\___( ) |_|\_\___||___/_| |_|\___|\___(_)
-                        |/                                   
-    </pre>
+    <ul class="social-list">
+        <li>
+            <a href="https://observablehq.com/@oluckyman" title="See my work on Observable">
+                <svg role="img" viewBox="0 0 25 28" width="25" height="28" aria-label="Observable" fill="currentColor" class="icon"><path d="M12.5 22.6667C11.3458 22.6667 10.3458 22.4153 9.5 21.9127C8.65721 21.412 7.98339 20.7027 7.55521 19.8654C7.09997 18.9942 6.76672 18.0729 6.56354 17.1239C6.34796 16.0947 6.24294 15.0483 6.25 14C6.25 13.1699 6.30417 12.3764 6.41354 11.6176C6.52188 10.8598 6.72292 10.0894 7.01563 9.30748C7.30833 8.52555 7.68542 7.84763 8.14479 7.27274C8.62304 6.68378 9.24141 6.20438 9.95208 5.87163C10.6979 5.51244 11.5458 5.33333 12.5 5.33333C13.6542 5.33333 14.6542 5.58467 15.5 6.08733C16.3428 6.588 17.0166 7.29733 17.4448 8.13459C17.8969 8.99644 18.2271 9.9103 18.4365 10.8761C18.6448 11.841 18.75 12.883 18.75 14C18.75 14.8301 18.6958 15.6236 18.5865 16.3824C18.4699 17.1702 18.2639 17.9446 17.9719 18.6925C17.6698 19.4744 17.2948 20.1524 16.8427 20.7273C16.3906 21.3021 15.7927 21.7692 15.0479 22.1284C14.3031 22.4876 13.4542 22.6667 12.5 22.6667ZM14.7063 16.2945C15.304 15.6944 15.6365 14.864 15.625 14C15.625 13.1073 15.326 12.3425 14.7292 11.7055C14.1313 11.0685 13.3885 10.75 12.5 10.75C11.6115 10.75 10.8688 11.0685 10.2708 11.7055C9.68532 12.3123 9.36198 13.1405 9.375 14C9.375 14.8927 9.67396 15.6575 10.2708 16.2945C10.8688 16.9315 11.6115 17.25 12.5 17.25C13.3885 17.25 14.124 16.9315 14.7063 16.2945ZM12.5 27C19.4031 27 25 21.1792 25 14C25 6.82075 19.4031 1 12.5 1C5.59687 1 0 6.82075 0 14C0 21.1792 5.59687 27 12.5 27Z"></path></svg>
+                <span>Observable</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://stackoverflow.com/story/belsky" title="See my developer story">
+                <svg role="img" viewBox="0 0 384 512" area-label="Stack Overflow" class="icon" width="12" height="16"><path fill="currentColor" d="M290.7 311L95 269.7 86.8 309l195.7 41zm51-87L188.2 95.7l-25.5 30.8 153.5 128.3zm-31.2 39.7L129.2 179l-16.7 36.5L293.7 300zM262 32l-32 24 119.3 160.3 32-24zm20.5 328h-200v39.7h200zm39.7 80H42.7V320h-40v160h359.5V320h-40z"></path></svg>
+                <span>Stack Overflow</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://github.com/oluckyman" title="See my work on GitHub">
+                <svg role="img" viewBox="0 0 16 16" area-label="GitHub" width="16" height="16" class="icon"><path fill="currentColor" d="M14.0609 4.65755C13.435 3.58505 12.5859 2.73595 11.5135 2.11005C10.4409 1.48413 9.26999 1.17125 7.99989 1.17125C6.72994 1.17125 5.55864 1.48423 4.4863 2.11005C3.4138 2.73591 2.56476 3.58505 1.9388 4.65755C1.31295 5.73002 1 6.90116 1 8.17095C1 9.69625 1.44501 11.0678 2.33526 12.2861C3.22542 13.5044 4.37536 14.3474 5.78501 14.8153C5.94909 14.8457 6.07056 14.8243 6.14954 14.7516C6.22855 14.6787 6.26801 14.5875 6.26801 14.4782C6.26801 14.46 6.26644 14.296 6.26341 13.9861C6.26028 13.6761 6.25881 13.4057 6.25881 13.175L6.04917 13.2113C5.91551 13.2358 5.74689 13.2461 5.54331 13.2432C5.33983 13.2404 5.1286 13.219 4.90989 13.1794C4.69109 13.1401 4.48757 13.0489 4.29919 12.9062C4.11091 12.7634 3.97725 12.5764 3.89823 12.3457L3.80709 12.136C3.74634 11.9963 3.6507 11.8412 3.52004 11.6712C3.38937 11.501 3.25724 11.3856 3.12358 11.3249L3.05977 11.2792C3.01724 11.2488 2.97779 11.2122 2.9413 11.1697C2.90484 11.1273 2.87755 11.0847 2.85932 11.0421C2.84106 10.9995 2.85619 10.9646 2.90487 10.9371C2.95356 10.9097 3.04154 10.8964 3.1692 10.8964L3.35142 10.9236C3.47295 10.948 3.62328 11.0208 3.80259 11.1424C3.98181 11.2639 4.12914 11.4218 4.2446 11.6162C4.38443 11.8654 4.55289 12.0552 4.75046 12.1859C4.94788 12.3166 5.14692 12.3818 5.3474 12.3818C5.54788 12.3818 5.72103 12.3666 5.86692 12.3364C6.01265 12.306 6.14938 12.2603 6.27704 12.1996C6.33173 11.7923 6.48062 11.4794 6.72359 11.2607C6.37728 11.2243 6.06593 11.1695 5.78938 11.0966C5.51299 11.0236 5.22737 10.9052 4.93271 10.741C4.6379 10.577 4.39334 10.3733 4.19895 10.1304C4.00454 9.88734 3.84499 9.56824 3.72052 9.17337C3.59598 8.77835 3.5337 8.32268 3.5337 7.80622C3.5337 7.07086 3.77377 6.4451 4.2538 5.92858C4.02893 5.37573 4.05016 4.75597 4.31755 4.06936C4.49377 4.01461 4.75509 4.05569 5.1014 4.19236C5.44777 4.32909 5.70137 4.44621 5.86245 4.54332C6.02354 4.6404 6.15261 4.72267 6.24984 4.78939C6.81505 4.63147 7.39832 4.55249 7.99982 4.55249C8.60133 4.55249 9.18473 4.63147 9.74996 4.78939L10.0963 4.57075C10.3331 4.42486 10.6128 4.29116 10.9347 4.16963C11.2567 4.04816 11.503 4.0147 11.6732 4.06945C11.9465 4.75609 11.9709 5.37582 11.7459 5.92867C12.2259 6.4452 12.4661 7.07112 12.4661 7.80632C12.4661 8.32277 12.4036 8.77989 12.2793 9.17794C12.1548 9.57606 11.9938 9.89485 11.7964 10.135C11.5988 10.3751 11.3526 10.5771 11.058 10.7411C10.7633 10.9052 10.4776 11.0236 10.2012 11.0966C9.92465 11.1695 9.6133 11.2244 9.26699 11.2608C9.58284 11.5342 9.7408 11.9656 9.7408 12.555V14.478C9.7408 14.5872 9.77879 14.6784 9.85483 14.7513C9.93078 14.8241 10.0507 14.8455 10.2148 14.815C11.6246 14.3472 12.7746 13.5041 13.6647 12.2858C14.5547 11.0676 14.9999 9.69599 14.9999 8.17069C14.9996 6.90106 14.6865 5.73002 14.0609 4.65755Z"></path></svg>
+                <span>GitHub</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://twitter.com/ilya_belsky" title="Follow me on Twitter">
+                <svg role="img" viewBox="0 0 16 16" width="16" height="16" area-label="Twitter" fill="currentColor" class="icon"><path d="M15 3.429c-.517.24-1.07.402-1.651.477a3.028 3.028 0 0 0 1.264-1.675 5.761 5.761 0 0 1-1.827.728 2.8 2.8 0 0 0-2.1-.959C9.1 2 7.812 3.355 7.812 5.025c0 .24.027.47.074.691-2.39-.119-4.509-1.327-5.926-3.153-.25.444-.39.96-.39 1.522 0 1.052.509 1.977 1.279 2.52a2.758 2.758 0 0 1-1.302-.379c.66 1.819 1.428 2.821 2.306 3.007a2.783 2.783 0 0 1-1.293.052c.37 1.202 1.43 2.078 2.691 2.102A5.588 5.588 0 0 1 1 12.641 7.886 7.886 0 0 0 5.417 14c5.291 0 8.181-4.611 8.181-8.604 0-.128 0-.258-.008-.387.374-.283.844-.81 1.41-1.58z"></path></svg>
+                <span>Twitter</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://medium.com/@oluckyman" title="Follow me on Medium">
+                <svg role="img" viewBox="0 0 512 512" class="icon" area-label="Medium" width="16" height="16"><path fill="currentColor" d="M71.5 142.3c.6-5.9-1.7-11.8-6.1-15.8L20.3 72.1V64h140.2l108.4 237.7L364.2 64h133.7v8.1l-38.6 37c-3.3 2.5-5 6.7-4.3 10.8v272c-.7 4.1 1 8.3 4.3 10.8l37.7 37v8.1H307.3v-8.1l39.1-37.9c3.8-3.8 3.8-5 3.8-10.8V171.2L241.5 447.1h-14.7L100.4 171.2v184.9c-1.1 7.8 1.5 15.6 7 21.2l50.8 61.6v8.1h-144v-8L65 377.3c5.4-5.6 7.9-13.5 6.5-21.2V142.3z"></path></svg>
+                <span>Medium</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://instagram.com/ilya_belsky" title="Follow me on Instagram">
+                <svg role="img" viewBox="0 0 448 512" class="icon" area-label="Instagram" width="14" height="16"><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
+                <span>Instagram</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://t.me/oluckyman" title="Drop me a line on Telegram">
+                <svg role="img" viewBox="0 0 448 512" class="icon" area-label="Telegram" width="14" height="16"><path fill="currentColor" d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"></path></svg>
+                <span>Telegram</span>
+            </a>
+        </li>
+    </ul>
 </div>
 </body>
