Tweak dark mode theme

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         }
         @media (prefers-color-scheme: dark) {
             :root {
-                --link-color: #74583E;
-                --link-color-hover: #A8805D;
+                --link-color: #a8805d;
+                --link-color-hover: #C6AC95;
             }
             html {
-                background-image: linear-gradient(to top, #1b0e04, #180d02, #150c01, #120b00, #0e0a00);
+                background: linear-gradient(to top, #3d1e06, #351c03, #2e1b01, #271800, #211600, #1c1300, #150f00, #0e0a00);
                 font-weight: 300;
             }
             .icon {
