--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             position: relative;
             top: 1.5px;
         }
+        .hr {
+            margin: 0.5em 0;
+            opacity: 0.0;
+            width: 17px;
+            border-top: 1px solid var(--link-color);
+        }
     </style>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -124,6 +130,13 @@
             <a href="https://t.me/oluckyman" title="Drop me a line on Telegram">
                 <svg role="img" viewBox="0 0 448 512" class="icon" area-label="Telegram" width="14" height="16"><path fill="currentColor" d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"></path></svg>
                 <span>Telegram</span>
+            </a>
+        </li>
+        <div class="hr"></div>
+        <li>
+            <a href="https://yoga-calendar-effect.now.sh/" title="People all over the world practice yoga in sync">
+                <svg style="opacity: 0" role="img" viewBox="0 0 448 512" class="icon" area-label="Telegram" width="14" height="16"><path fill="currentColor" d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"></path></svg>
+                <span>Yoga Calendar Effect</span>
             </a>
         </li>
         <li>
