Use Typeform's favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="https://public-assets.typeform.com/public/favicon/browserconfig.xml" name="msapplication-config">
+    <link href="https://public-assets.typeform.com/public/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
     <style>
         @font-face {
             font-family: 'Fira Code';
