--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
             width: 17px;
             border-top: 1px solid var(--link-color);
         }
+        .cv {
+            font-weight: bold;
+            font-size: 14px;
+            letter-spacing: 1.4px;
+            opacity: 0.5;
+        }
     </style>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -115,6 +121,7 @@
                 <svg role="img" viewBox="0 0 384 512" area-label="Stack Overflow" class="icon" width="12" height="16"><path fill="currentColor" d="M290.7 311L95 269.7 86.8 309l195.7 41zm51-87L188.2 95.7l-25.5 30.8 153.5 128.3zm-31.2 39.7L129.2 179l-16.7 36.5L293.7 300zM262 32l-32 24 119.3 160.3 32-24zm20.5 328h-200v39.7h200zm39.7 80H42.7V320h-40v160h359.5V320h-40z"></path></svg>
                 <span>Stack Overflow</span>
             </a>
+            <a href="cv.pdf" class="cv">(CV)</a>
         </li>
         <li>
             <a href="https://twitter.com/ilya_belsky" title="Follow me on Twitter">
