--- a/index.html
+++ b/index.html
@@ -136,9 +136,12 @@
             </a>
         </li>
         <li>
-            <a href="https://t.me/oluckyman" title="Drop me a line on Telegram">
-                <svg role="img" viewBox="0 0 448 512" class="icon" area-label="Telegram" width="14" height="16"><path fill="currentColor" d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"></path></svg>
-                <span>Telegram</span>
+            <a href="mailto:ilya@belsky.in" title="Drop me a line on email">
+                <svg role="img" viewBox="0 0 512 512" class="icon" area-label="Email" width="16" height="16">
+                    <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                    <path fill="currentColor" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
+                </svg>
+                <span>ilya@belsky.in</span>
             </a>
         </li>
         <div class="hr"></div>
