--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="https://public-assets.typeform.com/public/favicon/browserconfig.xml" name="msapplication-config">
-    <link href="https://public-assets.typeform.com/public/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+
     <style>
         @font-face {
             font-family: 'Fira Code';
